wrap all page content in fixed inset container, and remove loading eager from schedule page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -112,7 +112,7 @@ a:active {
 @keyframes fade-in-up {
   0% {
     opacity: 0;
-    transform: translateY(15%) scale(1);
+    transform: translateY(17%) scale(1);
   }
   50% {
     /* opacity: 0.2; */
@@ -165,12 +165,12 @@ a:active {
 }
 
 ::view-transition-new(root) {
-  z-index: 2;
-  animation: fade-in-up 450ms 325ms cubic-bezier(0, 0, 0, 1) both;
+  z-index: 3;
+  animation: fade-in-up 450ms 325ms cubic-bezier(0.1, 0.1, 0.1, 1) both;
 }
 ::view-transition-old(root) {
   z-index: 2;
-  animation: fade-out-forward 200ms cubic-bezier(0, 0, 0, 0) both;
+  animation: fade-out-forward 200ms cubic-bezier(0.1, 0.1, 0.1, 0.1) both;
 }
 
 /* ::view-transition-old(navbar-header-bg), */
